# odp

./: .gitignore  PHASE.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.claude/: settings.local.json
configs/api/: example_shopify_orders.yaml
configs/crawler/: example_competitor_pages.yaml
configs/ftp/: example_vendor_invoices.yaml
lib/os_data_platform/: cli.py
lib/os_data_platform/config/: __init__.py  api.py  common.py  crawler.py  ftp.py  registry.py
tests/: test_config_loader.py  test_config_validation.py
